--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
-    "classnames": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
-    "react-router": "^7.1.3"
+    "react-router": "^7.1.3",
+    "react-select": "^5.10.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
